--- a/complet.html
+++ b/complet.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Cadavre exquis</title>
-  <link rel="icon" type="image/x-icon" href="images/mouche.png">
+  <link rel="icon" type="image/x-icon" href="images/ciseaux.png">
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -14,7 +14,7 @@
       <p class="navigation"><a href="index.html">Retour</a></p>
     </div>
     <div class="top-right">
-      <img src="images/mouche.png">
+      <img src="images/ciseaux.png">
     </div>
   </div>
 
